tests/tooling/fixtures/native/recovery/positive/hex_literal_global_initializer_chain.objc3
module HexLiteralGlobalInitializerChain;

let a = 0xA;
let b = a + 0x5;
let c = b << 0x1;

fn main() -> i32 {
  return c;
}
