tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_malformed_shift_right_assign_tokenization.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMalformedShiftRightAssignTokenization;

fn main() -> i32 {
  let value = 8;
  value >> = 1;
  return value;
}
